--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -204,8 +204,7 @@
                             layout="@layout/item_transaction"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_below="@id/transactionsHeaderLayout"
-                            android:layout_marginTop="8dp" />
+                            android:layout_below="@id/transactionsHeaderLayout" />
 
                     </RelativeLayout>
 
@@ -219,29 +218,40 @@
                 android:layout_below="@id/walletsCard"
                 android:layout_marginStart="18dp"
                 android:layout_marginEnd="18dp"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="1">
 
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/barChartCard"
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="160dp"
                     android:layout_weight="0.5"
                     app:cardCornerRadius="18dp"
                     app:strokeWidth="0dp">
 
+                    <com.github.mikephil.charting.charts.BarChart
+                        android:id="@+id/barChart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="12dp" />
+
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/lineChartCard"
+                    android:id="@+id/pieChartCard"
                     android:layout_width="0dp"
-                    android:layout_height="150dp"
+                    android:layout_height="160dp"
                     android:layout_marginStart="18dp"
                     android:layout_weight="0.5"
                     app:cardCornerRadius="18dp"
                     app:strokeWidth="0dp">
 
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/pieChart"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="12dp" />
                 </com.google.android.material.card.MaterialCardView>
 
             </LinearLayout>
