--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="18dp">
 
     <ImageView
         android:id="@+id/transactionImage"
@@ -10,33 +12,52 @@
         android:layout_centerVertical="true"
         android:src="@drawable/ic_baseline_person_24" />
 
-    <TextView
-        android:id="@+id/transactionAmount"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="12dp"
         android:layout_toEndOf="@id/transactionImage"
-        android:text="- 90.0 lei"
-        android:textColor="#D50000"
-        android:textStyle="bold" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/transactionDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/transactionAmount"
-        android:layout_marginStart="8dp"
-        android:layout_toEndOf="@id/transactionImage"
-        android:text="Fri, Aug 12, 15:48" />
+        <TextView
+            android:id="@+id/transactionPerson"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Daniela" />
 
-    <TextView
-        android:id="@+id/transactionCategory"
+        <TextView
+            android:id="@+id/transactionDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Fri, Aug 12, 15:48" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/moneyLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/transactionDate"
-        android:layout_marginStart="8dp"
-        android:layout_toEndOf="@id/transactionImage"
-        android:text="Transportation"
-        android:textSize="12sp" />
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginEnd="12dp"
+        android:gravity="center"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/transactionAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="- 90.0 lei"
+            android:textColor="#D50000"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/transactionCategory"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Transport"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 
 </RelativeLayout>
