--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,9 +84,48 @@
                 app:strokeWidth="0dp">
 
                 <RelativeLayout
+                    android:id="@+id/addWalletLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="24dp"
+                    android:visibility="gone"
+                    tools:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/addWalletText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Add a wallet to start tracking"
+                        android:textSize="18sp"
+                        android:textStyle="bold" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/addWalletBtn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="34dp"
+                        android:layout_below="@id/addWalletText"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop="18dp"
+                        android:insetLeft="0dp"
+                        android:insetTop="0dp"
+                        android:insetRight="0dp"
+                        android:insetBottom="0dp"
+                        android:padding="8dp"
+                        android:text="Add Wallet"
+                        android:textSize="12sp"
+                        app:cornerRadius="10dp"
+                        app:icon="@drawable/ic_round_add_24"
+                        app:iconGravity="textStart"
+                        app:iconPadding="4dp" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/walletLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:padding="24dp">
+                    android:padding="24dp"
+                    tools:visibility="gone">
 
                     <LinearLayout
                         android:id="@+id/titleLayout"
