--- a/app/src/main/res/layout/item_transaction.xml
+++ b/app/src/main/res/layout/item_transaction.xml
@@ -6,10 +6,12 @@
     android:layout_marginTop="18dp">
 
     <ImageView
+
         android:id="@+id/transactionImage"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_centerVertical="true"
+        android:contentDescription="@string/user_profile_picture"
         android:src="@drawable/ic_baseline_person_24" />
 
     <LinearLayout
@@ -24,13 +26,13 @@
             android:id="@+id/transactionPerson"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Daniela" />
+            tools:text="Daniela" />
 
         <TextView
             android:id="@+id/transactionDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Fri, Aug 12, 15:48" />
+            tools:text="Fri, Aug 12, 15:48" />
     </LinearLayout>
 
     <LinearLayout
@@ -40,23 +42,24 @@
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:layout_marginEnd="12dp"
-        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/transactionAmount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="- 90.0 lei"
+            android:layout_gravity="end"
             android:textColor="#D50000"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            tools:text="- 90.0 lei" />
 
         <TextView
             android:id="@+id/transactionCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Transport"
-            android:textSize="12sp" />
+            android:layout_gravity="end"
+            android:textSize="12sp"
+            tools:text="Transport" />
     </LinearLayout>
 
 
